# zkevm-circuits

./: .gitignore  .gitmodules  Cargo.toml  NOTICE  README.md  line_coverage.py  line_coverage.sh  module_comments.sh
aggregate-zkevm/: Cargo.toml
aggregate-zkevm/src/: main.rs
csv2html/: Cargo.toml
eth-types/: Cargo.toml
keccak256/: Cargo.toml
poseidon/: Cargo.toml
poseidon/src/: hash.rs  poseidon.rs
poseidon/src/poseidon/: pow5.rs
poseidon/src/poseidon/septidon/: instruction.rs  tests.rs
prover/: Cargo.toml  build.rs
prover/src/: batch.rs  chunk.rs  constants.rs  io.rs  lib.rs  proof.rs  test.rs  util.rs  zkevm.rs
prover/src/batch/: prover.rs  verifier.rs
prover/src/chunk/: prover.rs  verifier.rs
prover/src/proof/: batch.rs  chunk.rs
prover/src/test/: create_all_file.rs  proof_test.rs
prover/src/zkevm/: proof_test.rs  prover.rs  verifier.rs
prover/src/zkevm/test_data/: chunk_traces.json
zkevm-circuits/: .gitignore  Cargo.toml
zkevm-circuits/benches/: call_trace.rs  super_circuit.rs
zkevm-circuits/benches/benchmark_list/: call_trace.rs  erc20.rs  init_proof_params.rs  main.rs  super_circuit.rs
zkevm-circuits/debug/: 1.txt
zkevm-circuits/examples/: gen_code.rs
zkevm-circuits/src/: arithmetic_circuit.rs  bitwise_circuit.rs  bytecode_circuit.rs  composer_circuit.rs  constant.rs  copy_circuit.rs  core_circuit.rs  error.rs  execution.rs  exp_circuit.rs  fixed_circuit.rs  keccak_circuit.rs  lib.rs  poseidon_circuit.rs  public_circuit.rs  public_circuit_no_hash.rs  simple_example.rs  simple_example_lookup2.rs  stack_circuit.rs  state_circuit.rs  super_circuit.rs  table.rs  util.rs  witness.rs
zkevm-circuits/src/arithmetic_circuit/: operation.rs
zkevm-circuits/src/arithmetic_circuit/operation/: add.rs  addmod.rs  div_mod.rs  length.rs  memory_expansion.rs  mul.rs  mulmod.rs  sdiv_smod.rs  slt_sgt.rs  sub.rs  u64div.rs  u64overflow.rs
zkevm-circuits/src/core_circuit/: execution.rs  opcode.rs
zkevm-circuits/src/core_circuit/opcode/: add.rs  mul.rs  pop.rs  push.rs  stop.rs  sub.rs
zkevm-circuits/src/execution/: add.rs  add_sub_mul_div_mod.rs  addmod.rs  and_or_xor.rs  balance.rs  begin_block.rs  begin_chunk.rs  begin_tx_1.rs  begin_tx_2.rs  begin_tx_3.rs  blockhash.rs  byte.rs  call_1.rs  call_2.rs  call_3.rs  call_4.rs  call_5.rs  call_6.rs  call_7.rs  call_context.rs  calldatacopy.rs  calldataload.rs  code_info.rs  codecopy.rs  codesize.rs  div_mod.rs  dup.rs  end_block.rs  end_call.rs  end_call_1.rs  end_call_2.rs  end_chunk.rs  end_padding.rs  end_tx.rs  eq.rs  error_invalid_jump.rs  error_invalid_opcode.rs  error_invalid_stack_pointer.rs  error_oog_account_access.rs  error_oog_constant.rs  (+59 more)
zkevm-circuits/src/keccak_circuit/: keccak_packed_multi.rs  table.rs  util.rs
zkevm-circuits/src/state_circuit/: lookups.rs  multiple_precision_integer.rs  ordering.rs
zkevm-circuits/src/witness/: arithmetic.rs  bitwise.rs  block.rs  bytecode.rs  copy.rs  core.rs  exec_helper.rs  exp.rs  fix.rs  fixed.rs  poseidon.rs  public.rs  state.rs  util.rs
zkevm-circuits/test_data/: 1.txt  1_code.txt  README.md  friend_tech.json  short-bytecode.txt  short-log.json  short-trace.json  short-trace.jsonl  test.csv  yyx.csv
zkevm-circuits/test_data/call_test/contracts/: A.sol  B.sol  C.sol
zkevm-circuits/test_data/call_test/scripts/: deploy.js
zkevm-circuits/test_data/call_test/test/: test.js
zkevm-circuits/test_data/call_test/trace/: block_info.json  bytecode.json  tx_debug_trace.json  tx_info.json  tx_receipt.json
zkevm-circuits/test_data/empty_block_test/test/: empty_block.js
zkevm-circuits/test_data/empty_block_test/trace/: block_info_1.json  block_info_2.json  block_info_3.json  block_info_4.json  block_info_5.json
zkevm-circuits/test_data/erc20_test/cmd_output/: node_run.txt  test_output.txt
zkevm-circuits/test_data/erc20_test/contract/: Token.sol
zkevm-circuits/test_data/erc20_test/script/: jsonrpc_cmd_t01.txt  jsonrpc_cmd_t02.txt  jsonrpc_cmd_t03.txt  jsonrpc_cmd_t04.txt
zkevm-circuits/test_data/erc20_test/test/: jsonrpc_cmd_t03.txt  jsonrpc_cmd_t04.txt  token.js
zkevm-circuits/test_data/error_invalid_jump/root_invalid_jump/: block_info.json  bytecode.json  tx_debug_trace.json  tx_info.json
zkevm-circuits/test_data/error_invalid_jump/root_invalid_jump_dest_max_code/: block_info.json  bytecode.json  receipt_info.json  tx_debug_trace.json
zkevm-circuits/test_data/error_invalid_jump/root_invalid_jumpi/: block_info.json  bytecode.json  tx_debug_trace.json
zkevm-circuits/test_data/error_invalid_jump/sub_call_invalid_jump/: block_info.json  bytecode.json  receipt_info.json  tx_debug_trace.json  tx_info.json
zkevm-circuits/test_data/error_invalid_opcode/root_invalid_opcode/: block_info.json  bytecode.json  receipt_info.json  tx_debug_trace.json  tx_info.json
zkevm-circuits/test_data/error_invalid_opcode/sub_call_invalid_opcode/: block_info.json  bytecode.json  receipt_info.json  tx_debug_trace.json
zkevm-circuits/test_data/extcodehash_out_of_gas/: block_info.json  bytecode.json
zkevm-circuits/test_data/extcodesize_out_of_gas/: tx_info.json
zkevm-circuits/tests/: call_trace_test.rs  deploy_trace_test.rs  empty_block_test.rs  erc20_chunk_test.rs  erc20_test.rs  error_invalid_opcode_test.rs  error_oog_account_access.rs  error_oog_log_test.rs  error_out_of_gas_account_access.rs  invalid_jump.rs  invalid_stack_pointer_test.rs  log_trace_test.rs  mcopy_test.rs  multi_trace_test.rs  oog_constant.rs  short_trace_test.rs  sstore_with_original_test.rs  tload_tstore_test.rs
zkevm-circuits/tests/fuzz/: main.rs  mutate_trace_test.rs  mutate_witness_test.rs
zkevm-circuits/tests/opcode_tests/: .gitignore  add.rs  addmod.rs  address.rs  and.rs  balance.rs  basefee.rs  blockhash.rs  byte.rs  calldatacopy.rs  calldataload.rs  calldatasize.rs  caller.rs  callvalue.rs  chainid.rs  codecopy.rs  codesize.rs  coinbase.rs  create.rs  div.rs  dup1.rs  dup10.rs  dup11.rs  dup12.rs  dup13.rs  dup14.rs  dup15.rs  dup16.rs  dup2.rs  dup3.rs  dup4.rs  dup5.rs  dup6.rs  dup7.rs  dup8.rs  dup9.rs  eq.rs  error_invalid_jump.rs  exp.rs  extcodecopy.rs  (+100 more)
(+256 files in other folders)
