[workspace]
members = [
    "zkevm-circuits",
    "eth-types",
    "gadgets",
    "trace-parser",
    "keccak256",
    "prover"
]

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
rpath = false
lto = "thin"
incremental = false
codegen-units = 1

[profile.release]
opt-level = 3
debug = false
debug-assertions = true
overflow-checks = true
rpath = false
lto = "thin"
incremental = true

[profile.test]
opt-level = 3
