[workspace]
members = [
    "zkevm-circuits",
    "eth-types",
    "gadgets",
    "trace-parser",
    "keccak256",
    "prover",
    "aggregate-zkevm",
    "poseidon",
]

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
rpath = false
lto = "thin"
incremental = false
codegen-units = 1

[profile.release]
opt-level = 3
debug = false
debug-assertions = true
overflow-checks = true
rpath = false
lto = "thin"
incremental = true

[profile.test]
inherits = "dev"
opt-level = 3

[profile.dev]
opt-level = 3
# Set this to 1 or 2 to get more useful backtraces
debug = true
debug-assertions = false
panic = 'unwind'
# better recompile times
incremental = true
lto = "thin"
codegen-units = 16