[package]
name = "aggregate-zkevm"
version = "0.1.0"
edition = "2021"

[dependencies]
zkevm-circuits = { path = "../zkevm-circuits", default-features = false }
trace-parser = { path = "../trace-parser" }
snark-verifier-sdk = { git = "https://github.com/axiom-crypto/snark-verifier.git", tag = "v0.1.7-git", default-features = false, features = ["loader_halo2", "loader_evm", "halo2-pse", "display"] }
snark-verifier = { git = "https://github.com/axiom-crypto/snark-verifier.git", tag = "v0.1.7-git", default-features = false }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v0.3.0", features = ["circuit-params", "derive_serde"] }

itertools = "0.11"
lazy_static = "1.4.0"
num-bigint = "0.4.3"
num-integer = "0.1.45"
num-traits = "0.2.15"
rand = "0.8"
rand_chacha = "0.3.1"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "2.2", optional = true }
bincode = "1.3.3"
ark-std = { version = "0.3.0", features = ["print-trace"], optional = true }
getset = "0.1.2"

# loader_evm
ethereum-types = { version = "=0.14.1", default-features = false, features = [
    "std",
], optional = true }

[dev-dependencies]
ark-std = { version = "0.3.0", features = ["print-trace"] }
paste = "1.0.7"
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }
criterion = "0.5.1"
criterion-macro = "0.4"
# loader_evm
crossterm = { version = "0.25" }
ratatui = { version = "0.24", default-features = false, features = ["crossterm"] }

[features]
default = ["call-trace-circuit", "display"]
display = ["snark-verifier/display", "dep:ark-std"]
call-trace-circuit = []
erc20-deploy-circuit = []
simple-opcode-circuit = []
sstorage-circuit = []
zkevm-fast-test = ["zkevm-circuits/fast_test"]
