[package]
name = "keccak256"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
itertools = "0.10.1"
num-bigint = "0.4.2"
num-traits = "0.2.14"
eth-types = { path = "../eth-types" }
lazy_static = "1.4"
log = "0.4.14"
env_logger = "0.9"

[dev-dependencies]
pretty_assertions = "1.0"
rand = "0.8"
