[package]
name = "prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zkevm-circuits = { path = "../zkevm-circuits", default-features = false }
eth-types = { path = "../eth-types" }
trace-parser = { path = "../trace-parser" }

snark-verifier-sdk = { path = "../snark-verifier/snark-verifier-sdk", default-features = false, features = ["loader_halo2", "loader_evm", "halo2-pse", "display"] }

halo2_proofs = { path = "../../halo2/halo2_proofs", features = ["circuit-params", "derive_serde"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = { version = "1.0.94", features = ["unbounded_depth"] }
log = "0.4.21"
rand_chacha = "0.3.1"
once_cell = "1.10.0"
base64 = "0.22.1"
anyhow = "1.0.70"
serde_stacker = "0.1.11"
dotenvy = "0.15.7"
chrono = "0.4.19"
log4rs = { version = "1.2.0", default_features = false, features = ["console_appender", "file_appender"] }
sha2 = "0.10.2"
ark-std = { version = "0.3.0", features = ["print-trace"] }

[features]
default = ["fast_test"]
fast_test = ["zkevm-circuits/fast_test"]
no_keccak_circuit = ["zkevm-circuits/no_keccak_circuit"]