[package]
name = "zkevm-circuits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/wgr523/halo2.git" }
eth-types = { path = "../eth-types" }
ethers-core = "2.0.7"
rand_xorshift = "0.3"
rand = "0.8"
rand_chacha = "0.3"
sha3 = "0.10"
log = "0.4.17"
gadgets = { path = "../gadgets" }
plotters = { version = "0.3.4", optional = true }
anyhow = "1.0"
lazy_static = "1.4"
trace-parser = { path = "../trace-parser" }
serde = "1.0"
csv = "1.2"
strum = "0.24"
strum_macros = "0.24"
itertools = "0.10"
genco = { version = "0.17", optional = true }
convert_case = { version = "0.6", optional = true }
proc-macro2 = { optional = true }                              #version = "=1.0.55",
csv2html = { path = "../csv2html" }
ark-std = { version = "0.3", features = ["print-trace"] }

[dev-dependencies]
hex = "0.4.3"

[features]
default = ["fast_test"]
plot = ["dep:plotters", "halo2_proofs/dev-graph"]
gen_code = ["dep:genco", "dep:convert_case", "dep:proc-macro2"]
k_9 = []
no_fixed_lookup = []
no_lookup_merge = []
fast_test = ["k_9", "no_fixed_lookup"]
benches = []


# Definition of benchmarks profile to use.
[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
rpath = false
lto = "thin"
incremental = false
codegen-units = 1
