[package]
name = "zkevm-circuits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v0.3.0", features = ["circuit-params", "derive_serde"] }
eth-types = { path = "../eth-types" }
keccak256 = { path = "../keccak256" }
ethers-core = "2.0.7"
rand_xorshift = "0.3"
rand = "0.8"
rand_chacha = "0.3"
sha3 = "0.10"
log = "0.4.17"
gadgets = { path = "../gadgets" }
anyhow = "1.0"
lazy_static = "1.4"
trace-parser = { path = "../trace-parser" }
serde = "1.0"
csv = "1.2"
strum = "0.24"
strum_macros = "0.24"
itertools = "0.10"
genco = { version = "0.17", optional = true }
convert_case = { version = "0.6", optional = true }
proc-macro2 = { optional = true }                              #version = "=1.0.55",
csv2html = { path = "../csv2html" }
ark-std = { version = "0.3", features = ["print-trace"] }

[dev-dependencies]
hex = "0.4.3"
test-case = "*"
seq-macro = "0.3.5"

[features]
default = ["fast_test"]
gen_code = ["dep:genco", "dep:convert_case", "dep:proc-macro2"]
k_10 = []
no_fixed_lookup = []
no_lookup_merge = []
no_public_hash = []
no_block_hash = []
no_public_hash_lookup = []
no_hash_circuit = ["no_public_hash_lookup"]
fast_test = ["k_10", "no_fixed_lookup", "no_hash_circuit", "no_block_hash"]
benches = []
fuzz_test = []